2004-09-05  Ulrich Drepper  <drepper@redhat.com>

	* nscd/cache.c (cache_add): Correctly log GETHOSTBYADDR and
	GETHOSTBYADDRv6 requests.

2004-09-04  Ulrich Drepper  <drepper@redhat.com>

	* nscd/pwdcache.c (cache_addpw): Use correct key length in
	cache_add calls.
	* nscd/grpcache.c (cache_addgr): Likewise.

2004-09-03  Alfred M. Szmidt  <ams@kemisten.nu>

	* sysdeps/mach/hurd/i386/tls.h (THREAD_DTV): Changed type of _DTV
	to `dtv_t *'.

2004-09-03  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd.c (parse_opt): Use writev instead of two write for
	invalidate command.

2004-09-02  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (nscd_run): Check early for invalid request types.

2004-09-02  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/i386/tls.h (TLS_INIT_TP_EXPENSIVE): New macro.
	(INSTALL_NEW_DTV, THREAD_DTV): Rewritten to fetch the right word.
	(THREAD_SELF): New macro.

2004-09-02  Steven Munroe  <sjmunroe@us.ibm.com>

	[BZ #357]
	* stdlib/tst-setcontext.c (test_stack): Added test for stack clobber.
	(main): Call test_stack.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/getcontext.S
	(__getcontext): Push stack frame then save parms in local frame.
	Improve instruction scheduling.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/swapcontext.S
	(__swapcontext): Likewise.

2004-09-01  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/ia64/sys/ucontext.h [g++ >= 3.5]: Use
	__builtin_offsetof.

2004-09-01  Jakub Jelinek  <jakub@redhat.com>

	[BZ #361]
	* posix/fnmatch_loop.c (FCT): For backslash between brackets, branch
	to normal_bracket after fetching the next character.
	* posix/tst-fnmatch.input: Add 25 new tests.
	Reported by Markus Oberhumer <markus@oberhumer.com>.

2004-09-01  Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (dl_main): First check existence of ld.so.preload
	with access.

2004-09-01  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/bits/waitflags.h